force-app/main/default/objects/SCOC__AddressList__c/SCOC__AddressList__c.object-meta.xml
<CustomObject>
    <description>Response Entity Address List</description>
    <label>Address</label>
    <nameField>
        <displayFormat>ADDR-{00000}</displayFormat>
        <label>Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>