force-app/main/default/objects/SCOC__AddressList__c/fields/SCOC__Address1__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Address1__c</fullName>
    <description>Address 1</description>
    <label>Address 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>