force-app/main/default/objects/SCOC__AddressList__c/fields/SCOC__AddressSource__c.field-meta.xml
<CustomField>
    <fullName>SCOC__AddressSource__c</fullName>
    <description>Address Source</description>
    <label>Address Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>