force-app/main/default/objects/SCOC__AddressList__c/fields/SCOC__DateReported__c.field-meta.xml
<CustomField>
    <fullName>SCOC__DateReported__c</fullName>
    <description>Date that the address was reported.</description>
    <label>Date Reported</label>
    <type>Date</type>
</CustomField>