force-app/main/default/objects/SCOC__AddressList__c/fields/SCOC__DwellingType__c.field-meta.xml
<CustomField>
    <fullName>SCOC__DwellingType__c</fullName>
    <label>Dwelling Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>