force-app/main/default/objects/SCOC__AddressList__c/fields/SCOC__GeoBlockGroup__c.field-meta.xml
<CustomField>
    <fullName>SCOC__GeoBlockGroup__c</fullName>
    <description>Geo Block Group</description>
    <label>Geo Block Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>