force-app/main/default/objects/SCOC__AddressList__c/fields/SCOC__GeoCensusTract__c.field-meta.xml
<CustomField>
    <fullName>SCOC__GeoCensusTract__c</fullName>
    <description>Geo Census Tract</description>
    <label>Geo Census Tract</label>
    <length>10</length>
    <type>Text</type>
</CustomField>