force-app/main/default/objects/SCOC__AddressList__c/fields/SCOC__LastSubscriberCodeReporting__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LastSubscriberCodeReporting__c</fullName>
    <description>Last subscriber code reporting address.</description>
    <label>Last Subscriber Code Reporting</label>
    <length>10</length>
    <type>Text</type>
</CustomField>