force-app/main/default/objects/SCOC__AddressList__c/fields/SCOC__LastUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LastUpdatedDate__c</fullName>
    <description>Date that the address was last updated.</description>
    <label>Last Updated Date</label>
    <type>Date</type>
</CustomField>