force-app/main/default/objects/SCOC__AddressList__c/fields/SCOC__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PostalCode__c</fullName>
    <description>Postal Code</description>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>